unpackaged/main/default/objects/Customer_Success_Tier_Setting__mdt/Customer_Success_Tier_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Customer Success Tier Setting</label>
    <pluralLabel>Customer Success Tiers Settings</pluralLabel>
</CustomObject>