unpackaged/main/default/objects/Customer_Success_Tier_Setting__mdt/fields/Activation_Set_Method__c.field-meta.xml
<CustomField>
    <fullName>Activation_Set_Method__c</fullName>
    <label>Activation Set Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Modeled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>