unpackaged/main/default/objects/Customer_Success_Tier_Setting__mdt/fields/DE_Assignment_SLA_Comment__c.field-meta.xml
<CustomField>
    <fullName>DE_Assignment_SLA_Comment__c</fullName>
    <label>DE Assignment SLA Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>