unpackaged/main/default/objects/Customer_Success_Tier_Setting__mdt/fields/Expected_Days_to_Activation__c.field-meta.xml
<CustomField>
    <fullName>Expected_Days_to_Activation__c</fullName>
    <label>Expected Days to Activation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>