unpackaged/main/default/objects/Customer_Success_Tier_Setting__mdt/listViews/CS_Tier_Settings.listView-meta.xml
<ListView>
    <fullName>CS_Tier_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Activation_Set_Method__c</columns>
    <columns>Expected_Days_to_Activation__c</columns>
    <columns>Mode_Set_Method__c</columns>
    <columns>DE_Assignment_SLA_Comment__c</columns>
    <columns>Enroll_in_Launch_POC_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>CS Tier Settings</label>
    <language>en_US</language>
</ListView>